service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-openapi-service
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    color: @color@
