ingress-blue.yaml
{
  "apiVersion": "extensions/v1beta1",
  "kind": "Ingress",
  "metadata": {
    "name": "mpopenapi-ingress-blue",
    "namespace": "default",
    "labels": {
      "app": "mpopenapi",
      "color": "green"
    },
    "annotations": {
      "ingress.kubernetes.io/proxy-body-size": "0",
      "ingress.kubernetes.io/rewrite-target": "/"
    }
  },
  "spec": {
    "rules": [
      {
        "host": "mpopenapi.169.60.185.3.nip.io",
        "http": {
          "paths": [
            {
              "path": "/*",
              "backend": {
                "serviceName": "open-api-release-blue-mp-openapi",
                "servicePort": 9080
              }
            }
          ]
        }
      }
    ]
  }
}
